Feature: Chaos-to-Order Nesting Animation in Hero Section

--- a/index.html
+++ b/index.html
@@ -66,18 +66,9 @@
             </div>
 
             <div class="hero-visual">
-                <div class="app-window">
-                    <div class="app-header">
-                        <div class="traffic-lights">
-                            <span></span><span></span><span></span>
-                        </div>
-                        <div class="address-bar">planarnest_job_01.svg</div>
-                    </div>
-                    <div class="app-content">
-                        <img src="./assets/app-screenshot.png" alt="App Interface">
-                    </div>
-                    <div class="reflection"></div>
-                </div>
+                <div id="nesting-animation-container"></div>
+                <!-- Fallback/Background glow -->
+                <div class="glow-effect"></div>
             </div>
         </div>
     </header>
