feat: add fade-in animations, refined hero typography

--- a/index.html
+++ b/index.html
@@ -42,22 +42,20 @@
     <header class="hero">
         <div class="container">
             <div class="hero-content">
-                <div class="pill-badge">
+                <div class="pill-badge fade-in-up">
                     <span class="pill-new">New</span>
                     <span>v1.0 Beta Release now available</span>
                 </div>
-                <h1 class="hero-title">
-                    Nesting engine for<br>
-                    <span class="gradient-text">professional makers.</span>
+                <h1 class="hero-title fade-in-up delay-1">
+                    The nesting engine<br>
+                    <span class="gradient-text">built for precision.</span>
                 </h1>
-                <p class="hero-description">
-                    Stop wasting material. The zero-config precision nesting tool for LightBurn types that pays for
-                    itself in one job.
+                <p class="hero-description fade-in-up delay-2">
+                    Stop wasting material. Zero-config nesting that pays for itself in a single job.
                 </p>
-                <div class="hero-actions">
+                <div class="hero-actions fade-in-up delay-3">
                     <a href="#" class="btn btn-primary glow-btn" id="download-btn">
                         <span>Download for Windows</span>
-                        <!-- <small>64-bit Installer</small> -->
                     </a>
                     <div class="sub-actions">
                         <span class="sub-text">macOS coming soon</span>
