feat: upgrade site with scroll reveal 3D tilt and parallax effects

--- a/index.html
+++ b/index.html
@@ -73,13 +73,13 @@
 
     <section id="features" class="features-section">
         <div class="container">
-            <div class="section-header">
+            <div class="section-header reveal-on-scroll">
                 <h2>Workflow, evolved.</h2>
                 <p>Designed to be invisible until you need it.</p>
             </div>
             <!-- Bento Grid Layout -->
             <div class="bento-grid">
-                <div class="bento-card span-2">
+                <div class="bento-card span-2 reveal-on-scroll delay-1">
                     <div class="card-content">
                         <div class="icon-box">⚡</div>
                         <h3>Instant Calculation</h3>
@@ -88,21 +88,21 @@
                     </div>
                     <div class="card-visual visual-graph"></div>
                 </div>
-                <div class="bento-card span-1">
+                <div class="bento-card span-1 reveal-on-scroll delay-2">
                     <div class="card-content">
                         <div class="icon-box">🔒</div>
                         <h3>Offline First</h3>
                         <p>No cloud uploads. Your proprietary designs never leave your creative station.</p>
                     </div>
                 </div>
-                <div class="bento-card span-1">
+                <div class="bento-card span-1 reveal-on-scroll delay-3">
                     <div class="card-content">
                         <div class="icon-box">✨</div>
                         <h3>Grain Control</h3>
                         <p>Lock rotation for wood grain direction or pattern matching.</p>
                     </div>
                 </div>
-                <div class="bento-card span-2">
+                <div class="bento-card span-2 reveal-on-scroll delay-1">
                     <div class="card-content">
                         <div class="icon-box">🚀</div>
                         <h3>Drag & Drop to LightBurn</h3>
@@ -117,12 +117,13 @@
 
     <section id="pricing" class="cta-section">
         <div class="container">
-            <div class="cta-card">
+            <div class="cta-card reveal-on-scroll">
                 <div class="glow-bg"></div>
                 <h2 style="font-size: 3rem;">$49</h2>
                 <p style="margin-bottom: 30px; font-size: 1.2rem; color: white;">Lifetime License</p>
                 <p style="margin-bottom: 40px; color: var(--text-muted);">Pay once. Use forever. No recurring fees.</p>
-                <button class="btn btn-primary" style="padding: 16px 48px; font-size: 1.1rem;">Buy Now</button>
+                <button class="btn btn-primary magnetic-btn" style="padding: 16px 48px; font-size: 1.1rem;">Buy
+                    Now</button>
             </div>
         </div>
     </section>
