--- a/index.html
+++ b/index.html
@@ -42,19 +42,19 @@
     <header class="hero">
         <div class="container fluid-container">
             <div class="hero-layout">
-                <div class="hero-content reveal-on-scroll">
-                    <div class="pill-badge">
+                <div class="hero-content">
+                    <div class="pill-badge reveal-on-scroll">
                         <span class="pill-new">NEW</span>
                         <span>v1.0 Beta Available</span>
                     </div>
-                    <h1 class="hero-title">
+                    <h1 class="hero-title reveal-on-scroll delay-1">
                         THE NESTING<br>
                         ENGINE <span class="gradient-text">BUILT FOR<br>PRECISION.</span>
                     </h1>
-                    <p class="hero-description">
+                    <p class="hero-description reveal-on-scroll delay-2">
                         Stop wasting material. Zero-config nesting that pays for itself in a single job.
                     </p>
-                    <div class="hero-actions">
+                    <div class="hero-actions reveal-on-scroll delay-3">
                         <a href="#" class="btn btn-xl btn-primary magnetic-btn" id="download-btn">
                             <span>Download for Windows</span>
                             <div class="btn-glow"></div>
