feat: add Terms page and update footer links (Twitter to Discord)

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         <div class="container">
             <div class="cta-card reveal-on-scroll">
                 <div class="glow-bg"></div>
-                <h2 style="font-size: 3rem;">$49</h2>
+                <h2 style="font-size: 3rem;">$34</h2>
                 <p style="margin-bottom: 30px; font-size: 1.2rem; color: white;">Lifetime License</p>
                 <p style="margin-bottom: 40px; color: var(--text-muted);">Pay once. Use forever. No recurring fees.</p>
                 <button class="btn btn-primary magnetic-btn" style="padding: 16px 48px; font-size: 1.1rem;">Buy
@@ -131,10 +131,13 @@
     <footer>
         <div class="container">
             <div class="footer-links">
-                <span class="copyright">© 2025 PlanarNest</span>
+                <span class="copyright">© 2026 PlanarNest</span>
                 <a href="#">Support</a>
-                <a href="#">Twitter</a>
-                <a href="#">Terms</a>
+                <a href="#">Discord</a>
+                <a href="terms.html">Terms</a>
+                <a href="eula.html">EULA</a>
+                <a href="#">Refund Policy</a>
+                <a href="#">Privacy Policy</a>
             </div>
         </div>
     </footer>
