--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
         href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Outfit:wght@500;700&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/svg+xml"
-        href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><rect width='100' height='100' rx='20' fill='%236366f1'/><path d='M30 30 L70 30 L70 70 L30 70 Z' fill='white'/></svg>">
+    <link rel="icon" type="image/svg+xml" href="assets/logo.svg">
 </head>
 
 <body>
@@ -28,7 +27,7 @@
     <nav class="navbar">
         <div class="container">
             <div class="logo">
-                <span class="logo-icon">▢</span> PlanarNest
+                <img src="assets/logo.svg" alt="PlanarNest" class="logo-icon"> PlanarNest
             </div>
             <div class="nav-links">
                 <a href="#features">Features</a>
