--- a/index.html
+++ b/index.html
@@ -77,37 +77,76 @@
             </div>
             <!-- Bento Grid Layout -->
             <div class="bento-grid">
+                <!-- 1. Clipboard -->
                 <div class="bento-card span-2 reveal-on-scroll delay-1">
                     <div class="card-content">
-                        <div class="icon-box">⚡</div>
-                        <h3>Instant Calculation</h3>
-                        <p>Our Rust-based engine processes hundreds of parts in milliseconds. It runs locally, utilizing
-                            every core of your CPU.</p>
+                        <h3>Seamless Clipboard Workflow</h3>
+                        <p>Stop importing and exporting files. Just copy, nest, and paste directly back into your
+                            workflow via SVG clipboard support.</p>
                     </div>
                     <div class="card-visual visual-graph"></div>
                 </div>
+
+                <!-- 2. Geometry Repair -->
                 <div class="bento-card span-1 reveal-on-scroll delay-2">
                     <div class="card-content">
-                        <div class="icon-box">🔒</div>
-                        <h3>Offline First</h3>
-                        <p>No cloud uploads. Your proprietary designs never leave your creative station.</p>
+                        <h3>Auto-Healing Geometry</h3>
+                        <p>Self-intersections and noise are automatically repaired before nesting, preventing overlap
+                            errors.</p>
                     </div>
                 </div>
+
+                <!-- 3. Rotation Constraints -->
                 <div class="bento-card span-1 reveal-on-scroll delay-3">
                     <div class="card-content">
-                        <div class="icon-box">✨</div>
-                        <h3>Grain Control</h3>
-                        <p>Lock rotation for wood grain direction or pattern matching.</p>
+                        <h3>Granular Rotation Control</h3>
+                        <p>Define specific rotation permissions per part to optimize for grain direction or tight
+                            packing.</p>
                     </div>
                 </div>
+
+                <!-- 4. Fast + Stable -->
                 <div class="bento-card span-2 reveal-on-scroll delay-1">
                     <div class="card-content">
-                        <div class="icon-box">🚀</div>
-                        <h3>Drag & Drop to LightBurn</h3>
-                        <p>Export standard vectors (SVG/DXF) that work perfectly with any CAM software, not just
-                            LightBurn.</p>
+                        <h3>High-Performance Engine</h3>
+                        <p>Process complex layouts in seconds. Give us 60 seconds, and we'll solve the puzzle.</p>
                     </div>
                     <div class="card-visual visual-integration"></div>
+                </div>
+
+                <!-- 5. Case Reports -->
+                <div class="bento-card span-1 reveal-on-scroll delay-2">
+                    <div class="card-content">
+                        <h3>One-Click Diagnostics</h3>
+                        <p>Bug reports made simple. Send logs directly from the tool or enable auto-send. No personal
+                            data, just fixes.</p>
+                    </div>
+                </div>
+
+                <!-- 6. Labeling -->
+                <div class="bento-card span-1 reveal-on-scroll delay-3">
+                    <div class="card-content">
+                        <h3>Automated Labeling</h3>
+                        <p>Instant identification. Enable auto-labeling to automatically mark every part in your nested
+                            layout.</p>
+                    </div>
+                </div>
+
+                <!-- 7. Remnant Sheets -->
+                <div class="bento-card span-1 reveal-on-scroll delay-1">
+                    <div class="card-content">
+                        <h3>Smart Remnant Management</h3>
+                        <p>Don't waste a drop. Manage and reuse leftover sheet material efficiently for future jobs.</p>
+                    </div>
+                </div>
+
+                <!-- 8. Color/Layer Integrity -->
+                <div class="bento-card span-3 reveal-on-scroll delay-2">
+                    <div class="card-content">
+                        <h3>Full Layer Fidelity</h3>
+                        <p>Your colors and layers stay intact. We nest your geometry without messing up your
+                            organizational structure.</p>
+                    </div>
                 </div>
             </div>
         </div>
