fix: update footer copyright and remove support link

--- a/refund-policy.html
+++ b/refund-policy.html
@@ -127,8 +127,7 @@
     <footer>
         <div class="container">
             <div class="footer-links">
-                <span class="copyright">© 2026 PlanarNest</span>
-                <a href="#">Support</a>
+                <span class="copyright">© 2026 PlanarNest. All rights reserved.</span>
                 <a href="#">Discord</a>
                 <a href="terms.html">Terms</a>
             </div>
