--- a/index.html
+++ b/index.html
@@ -168,8 +168,7 @@
     <footer>
         <div class="container">
             <div class="footer-links">
-                <span class="copyright">© 2026 PlanarNest</span>
-                <a href="#">Support</a>
+                <span class="copyright">© 2026 PlanarNest. All rights reserved.</span>
                 <a href="#">Discord</a>
                 <a href="terms.html">Terms</a>
             </div>
