--- a/terms.html
+++ b/terms.html
@@ -110,8 +110,7 @@
     <footer>
         <div class="container">
             <div class="footer-links">
-                <span class="copyright">© 2026 PlanarNest</span>
-                <a href="#">Support</a>
+                <span class="copyright">© 2026 PlanarNest. All rights reserved.</span>
                 <a href="#">Discord</a>
                 <a href="terms.html" style="color: #fff;">Terms</a>
             </div>
