--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Outfit:wght@500;700&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/png" href="assets/planarlogo.png">
+    <link rel="icon" type="image/png" href="assets/logo-black.png">
 </head>
 
 <body>
@@ -27,7 +27,7 @@
     <nav class="navbar">
         <div class="container">
             <div class="logo">
-                <img src="assets/planarlogo.png" alt="PlanarNest" class="logo-icon"> PlanarNest
+                <img src="assets/logo-black.png" alt="PlanarNest" class="logo-icon"> PlanarNest
             </div>
             <div class="nav-links">
                 <a href="#features">Features</a>
