--- a/refund-policy.html
+++ b/refund-policy.html
@@ -11,7 +11,7 @@
         href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Outfit:wght@500;700&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/png" href="assets/planarlogo.png">
+    <link rel="icon" type="image/png" href="assets/logo-black.png">
     <style>
         /* Specific overrides for text pages - reusing from terms.html */
         .legal-content {
@@ -84,7 +84,7 @@
     <nav class="navbar">
         <div class="container">
             <a href="index.html" class="logo" style="text-decoration: none; color: white;">
-                <img src="assets/planarlogo.png" alt="PlanarNest" class="logo-icon"> PlanarNest
+                <img src="assets/logo-black.png" alt="PlanarNest" class="logo-icon"> PlanarNest
             </a>
             <div class="nav-links">
                 <a href="index.html#features">Features</a>
