feat: integrate lemon squeezy checkout overlay

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/png" href="assets/logo-black.png">
+    <script src="https://assets.lemonsqueezy.com/lemon.js" defer></script>
 </head>
 
 <body>
@@ -53,7 +54,8 @@
                         Stop wasting material. Zero-config nesting that pays for itself in a single job.
                     </p>
                     <div class="hero-actions reveal-on-scroll delay-3">
-                        <a href="#" class="btn btn-xl btn-primary magnetic-btn" id="download-btn">
+                        <a href="https://planarnest.lemonsqueezy.com/checkout/buy/f40bb84a-f7a2-43ce-9e69-9ff3fe4ea5f8"
+                            class="btn btn-xl btn-primary magnetic-btn lemonsqueezy-button" id="download-btn">
                             <span>Download for Windows</span>
                             <div class="btn-glow"></div>
                         </a>
@@ -159,8 +161,10 @@
                 <h2 style="font-size: 3rem;">$34</h2>
                 <p style="margin-bottom: 30px; font-size: 1.2rem; color: white;">Lifetime License</p>
                 <p style="margin-bottom: 40px; color: var(--text-muted);">Pay once. Use forever. No recurring fees.</p>
-                <button class="btn btn-primary magnetic-btn" style="padding: 16px 48px; font-size: 1.1rem;">Buy
-                    Now</button>
+                <a href="https://planarnest.lemonsqueezy.com/checkout/buy/f40bb84a-f7a2-43ce-9e69-9ff3fe4ea5f8"
+                    class="btn btn-primary magnetic-btn lemonsqueezy-button"
+                    style="padding: 16px 48px; font-size: 1.1rem; display: inline-block;">Buy
+                    Now</a>
             </div>
         </div>
     </section>
