feat: add 3d video demo section

--- a/index.html
+++ b/index.html
@@ -71,6 +71,22 @@
         </div>
     </header>
 
+    <section id="demo-video" class="demo-section">
+        <div class="container">
+            <div class="demo-wrapper">
+                <div class="demo-3d-container">
+                    <div class="demo-card">
+                        <img src="assets/demo-frame.png" alt="PlanarNest UI" class="demo-frame">
+                        <video src="assets/fatball_20s_2x_720w.mp4" class="demo-video" loop muted playsinline></video>
+                        <div class="demo-overlay">
+                            <span class="demo-hint">Hover to Watch</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <section id="features" class="features-section">
         <div class="container">
             <div class="section-header reveal-on-scroll">
