fix: resolve 3D transform conflict by wrapping demo container in scroll-animate div

--- a/index.html
+++ b/index.html
@@ -80,15 +80,17 @@
                         crafted for fluid motion and instant feedback.</p>
                 </div>
                 <!-- Right Side: 3D Video -->
-                <div class="demo-3d-container scroll-animate delay-200">
-                    <div class="demo-card">
-                        <img src="assets/demo-frame.png" alt="PlanarNest UI" class="demo-frame">
-                        <video id="demoVideo" class="demo-video" muted playsinline loop preload="auto">
-                            <source src="assets/fatball_20s_2x_720w.mp4" type="video/mp4">
-                            Your browser does not support the video tag.
-                        </video>
-                        <div class="demo-overlay">
-                            <!-- Hint removed as requested -->
+                <div class="demo-3d-wrapper scroll-animate delay-200">
+                    <div class="demo-3d-container">
+                        <div class="demo-card">
+                            <img src="assets/demo-frame.png" alt="PlanarNest UI" class="demo-frame">
+                            <video id="demoVideo" class="demo-video" muted playsinline loop preload="auto">
+                                <source src="assets/fatball_20s_2x_720w.mp4" type="video/mp4">
+                                Your browser does not support the video tag.
+                            </video>
+                            <div class="demo-overlay">
+                                <!-- Hint removed as requested -->
+                            </div>
                         </div>
                     </div>
                 </div>
