chore: add clean URL redirects

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
     <footer>
         <div class="container">
             <div class="footer-links">
-                <span class="copyright">© 2026 PlanarNest. All rights reserved.</span>
+                <span class="copyright">&copy; 2026 PlanarNest. All rights reserved.</span>
                 <a href="#">Discord</a>
                 <a href="terms.html">Terms</a>
             </div>
