--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/png" href="assets/logo-black.png">
     <script src="https://assets.lemonsqueezy.com/lemon.js" defer></script>
+    <script>window.lemonSqueezyAffiliateConfig = { store: "planarnest" };</script>
+    <script src="https://lmsqueezy.com/affiliate.js" defer></script>
 </head>
 
 <body>
