--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -12,6 +12,8 @@
         rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/png" href="assets/logo-black.png">
+    <script>window.lemonSqueezyAffiliateConfig = { store: "planarnest" };</script>
+    <script src="https://lmsqueezy.com/affiliate.js" defer></script>
     <style>
         /* Specific overrides for text pages - reusing from terms.html */
         .legal-content {
