--- a/index.html
+++ b/index.html
@@ -100,6 +100,33 @@
         </div>
     </section>
 
+    <!-- --- 9. RESULT SECTION (New) --- -->
+    <section id="result-section" class="result-section">
+        <div class="container">
+            <div class="result-header reveal-on-scroll">
+                <h2 class="linear-heading">Rapidly nest <br>complex shapes.</h2>
+            </div>
+            
+            <div class="result-grid">
+                <!-- Image 1 -->
+                <div class="result-card card-1 reveal-on-scroll delay-1">
+                    <div class="result-image-wrapper">
+                        <img src="assets/result-1.png" alt="Nesting Result Example 1" class="result-img">
+                        <div class="glass-overlay"></div>
+                    </div>
+                </div>
+
+                <!-- Image 2 -->
+                <div class="result-card card-2 reveal-on-scroll delay-2">
+                    <div class="result-image-wrapper">
+                        <img src="assets/result-2.png" alt="Nesting Result Example 2" class="result-img">
+                        <div class="glass-overlay"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <section id="features" class="features-section">
         <div class="container">
             <div class="section-header reveal-on-scroll">
